# BRdocs-validation

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  python-app.yml  test.yml
br_docs/: __init__.py
br_docs/validators/: __init__.py  base.py  cert.py  cnh.py  cnpj.py  cns.py  cpf.py  nis.py  renavam.py  sei.py  te.py
br_docs/validators/types/: __init__.py  format.py  validation.py
tests/: __init__.py  cert.txt  cnhs.txt  cnpj.txt  cns.txt  conftest.py  cpfs.txt  invalid_sei.txt  nis.txt  renavam.txt  te.txt  test_brdocs.py  test_check_two_digits.py  test_format.py  valid_sei.txt
