[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brdocs-validation"
version = "0.0.1"
dependencies = [
  "pydantic>=2.6.1",
]
requires-python = ">= 3.10"
authors = [
  {name = "Vinícius Aguiar", email = "vaguiararqdevsoftware@proton.me"},
]
maintainers = [
  {name = "Vinícius Aguiar", email = "vaguiararqdevsoftware@proton.me"}
]
description = "Validates brazilian documents using typing hints in Pydantic's BaseModels."
readme = "README.md"
keywords = ["pydantic", "validation", "brazilian documents", "documentos brasileiros", "validação", "cpf", "cnpj"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/vinicius-oa/BRdocs-validation"