[build-system]
requires = ["setuptools >= 61.0", "wheel >= 0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "brdocs-validation"
version = "0.0.4"
dependencies = [
  "pydantic>=2.0"
]
requires-python = ">= 3.9"
authors = [
  {name = "Vinícius Aguiar", email = "vaguiararqdevsoftware@proton.me"},
]
maintainers = [
  {name = "Vinícius Aguiar", email = "vaguiararqdevsoftware@proton.me"}
]
description = "Validate brazilian documents using Type Hints in classes inheriting Pydantic's (V2) BaseModel"
readme = "README.md"
keywords = ["pydantic-v2", "cpf-validador", "cnpj-validador"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Repository = "https://github.com/vinicius-oa/BRdocs-validation"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "wheel",
    "twine",
    "tox",
    "ruff"
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4
env_list = py{39,310,311,312}-pydantic{20,21,22,23,24,25,26}
set_env =
  TEMP = {env_tmp_dir}

[testenv]
description = run tests
deps =
    pytest>=8
    pytest-sugar
commands =
    pytest {posargs:tests} --basetemp="{env_tmp_dir}"

[gh]
python =
    3.12 = py312-pydantic{20,21,22,23,24,25,26}
    3.11 = py311-pydantic{20,21,22,23,24,25,26}
    3.10 = py310-pydantic{20,21,22,23,24,25,26}
    3.9 = py39-pydantic{20,21,22,23,24,25,26}
"""